// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Webhook router singleUserHandler() should handle follow event 1`] = `
Array [
  Object {
    "_id": "_id",
    "allowNewReplyUpdate": true,
    "createdAt": 1989-06-04T00:00:00.000Z,
    "userId": "U4af4980629",
  },
]
`;

exports[`Webhook router singleUserHandler() should handle follow then unfollow then follow event 1`] = `
Array [
  Object {
    "_id": "_id",
    "allowNewReplyUpdate": true,
    "createdAt": 1989-06-04T00:00:00.000Z,
    "userId": "U4af4980630",
  },
]
`;

exports[`Webhook router singleUserHandler() should handle follow then unfollow then follow event 2`] = `
Array [
  Object {
    "_id": "_id",
    "allowNewReplyUpdate": false,
    "createdAt": 1989-06-04T00:00:00.000Z,
    "userId": "U4af4980630",
  },
]
`;

exports[`Webhook router singleUserHandler() should handle follow then unfollow then follow event 3`] = `
Array [
  Object {
    "_id": "_id",
    "allowNewReplyUpdate": true,
    "createdAt": 1989-06-04T00:00:00.000Z,
    "userId": "U4af4980630",
  },
]
`;

exports[`Webhook router singleUserHandler() should reply default messages 1`] = `
Array [
  Array [
    "/message/reply",
    Object {
      "messages": Array [
        Object {
          "text": "I cannot understand messages other than text.",
          "type": "text",
        },
      ],
      "replyToken": "nHuyWiB7yP5Zw52FIkcQobQuGDXCTA",
    },
  ],
]
`;

exports[`Webhook router singleUserHandler() should reply default messages 2`] = `
Array [
  Array [
    "U4af4980630",
    Object {
      "data": Object {},
      "state": "__INIT__",
    },
  ],
]
`;
